; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_strfree.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_strfree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_str = type { i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mg_strfree(%struct.mg_str* %0) #0 {
  %2 = alloca %struct.mg_str*, align 8
  %3 = alloca i8*, align 8
  store %struct.mg_str* %0, %struct.mg_str** %2, align 8
  %4 = load %struct.mg_str*, %struct.mg_str** %2, align 8
  %5 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %4, i32 0, i32 1
  %6 = load i32*, i32** %5, align 8
  %7 = bitcast i32* %6 to i8*
  store i8* %7, i8** %3, align 8
  %8 = load %struct.mg_str*, %struct.mg_str** %2, align 8
  %9 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %8, i32 0, i32 1
  store i32* null, i32** %9, align 8
  %10 = load %struct.mg_str*, %struct.mg_str** %2, align 8
  %11 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @free(i8* %15)
  br label %17

17:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
